Solucionado Validación de TFGs, ya no aparecen tfgs no validados en búsquedas normales
